2002-04-25  Alexandre Duret-Lutz  <duret_g@epita.fr>

	For PR automake/307:
	* lib/depcomp: Never compute dependencies in the background, this
	can cause races with libtool.  Compute the dependencies after
	the actual compilation.  Don't make libtool silent now that
	it's run in the foreground.
	* tests/pr307.test: New file.
	* tests/Makefile.am (TESTS): Add pr307.test.
	Reported by Laurent Morichetti.

2002-04-24  Alexandre Duret-Lutz  <duret_g@epita.fr>

	Fix PR automake/315:
	* automake.in (subobjname): Rewrite to generate variable name
	unique for each content.
	(%substnums): Remove.
	(%subobjvar): New hash.
	(initialize_per_input): Clear %subobjvar.
	(define_objects_from_sources): Return the name of the variable
	defined, in addition to the linker.  Call subobjname only once
	the content of the variable to define is known.
	(handle_source_transform): Adjust call to define_objects_from_sources.
	* tests/specflags8.test: Mention PR 315.
	* tests/subobjname.test: New file.
	* tests/Makefile.am (XFAIL_TESTS): Remove specflags8.test.
	(TESTS): Add subobjname.test.

2002-04-23  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* m4/depout.m4 (_AM_OUTPUT_DEPENDENCY_COMMANDS): Grep
	the whole file for 'generated by automake', not only the
	first line.  This accounts for post-processed Makefile.in's.
	* tests/postproc.test: New file.
	* tests/Makefile.am (TESTS): Add postproc.test.

2002-04-22  Alexandre Duret-Lutz  <duret_g@epita.fr>

	For PR automake/151 and PR automake/314:
	* automake.texi (A Program): Split into
	(Program Sources, Linking, Conditional Sources, Conditional
	Programs): ... these subsections; moving the Linking node
	before the Conditional discussions.
	(Conditional Sources): More details.  Notably, mention
	hello_DEPENDENCIES.
	(Conditionals): Adjust reference to Conditional Programs.

2002-04-19  Paul Eggert  <eggert@twinsun.com>

	Fix some problems when using "$@" when there might be zero
	positional arguments in cases where this matters.  Zsh doesn't